--- a/Components/dropdown.html
+++ b/Components/dropdown.html
@@ -24,6 +24,32 @@
             </ul>
         </label> 
     </div>
+    <div class="wrapper">
+        <label class="dropdown" for="dropdown-input">
+            <!-- <input type="checkbox" id="dropdown-input" style="display: none;"> -->
+            <div class="dropdown-header-wrapper"> 
+                <span class="dropdown-value dropdown-value-2">
+                </span>
+                <i class="fas fa-chevron-down icon-down show"></i>
+                <i class="fas fa-chevron-up icon-up"></i>
+            </div>
+            <ul class="dropdown-list dropdown-list-2">
+            </ul>
+        </label> 
+    </div>
+    <div class="wrapper">
+        <label class="dropdown" for="dropdown-input">
+            <!-- <input type="checkbox" id="dropdown-input" style="display: none;"> -->
+            <div class="dropdown-header-wrapper"> 
+                <span class="dropdown-value dropdown-value-3">
+                </span>
+                <i class="fas fa-chevron-down icon-down show"></i>
+                <i class="fas fa-chevron-up icon-up"></i>
+            </div>
+            <ul class="dropdown-list dropdown-list-3">
+            </ul>
+        </label> 
+    </div>
     <script src="./js/dropdown.js"></script>
 </body>
 </html>
