--- a/Components/combobox.html
+++ b/Components/combobox.html
@@ -10,18 +10,31 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="combobox">
-            <input type="text" name="" id="" class="combobox__input">
+        <div class="combobox combobox--position">
+            <input type="text" name="" class="combobox__input combobox__input--position">
             <div class="combobox__input-cancel">
                 <i class="fas fa-times-circle"></i>
             </div>
-            <div class="combobox__dropdown">
+            <div class="combobox__dropdown combobox__dropdown--position">
                 <i class="fas fa-chevron-down combobox__icon"></i>
             </div>
-            <ul class="combobox__list">
+            <ul class="combobox__list combobox__list--position">
             </ul>
         </div> 
     </div>    
+    <div class="wrapper">
+        <div class="combobox combobox--restaurant">
+            <input type="text" name="" class="combobox__input combobox__input--restaurant">
+            <div class="combobox__input-cancel">
+                <i class="fas fa-times-circle"></i>
+            </div>
+            <div class="combobox__dropdown combobox__dropdown--restaurant">
+                <i class="fas fa-chevron-down combobox__icon"></i>
+            </div>
+            <ul class="combobox__list combobox__list--restaurant">
+            </ul>
+        </div> 
+    </div> 
     <script src="./js/combobox.js"></script>
 </body>
 </html>
