--- a/Components/css/combobox.css
+++ b/Components/css/combobox.css
@@ -49,6 +49,11 @@
     cursor: pointer;
 }
 
+.combobox__icon {
+    transform: rotate(0);
+    transition: all 0.3s ease;
+}
+
 .combobox__dropdown:hover {
     background-color: #f5f5f5;
 }
@@ -110,4 +115,33 @@
 .combobox__input-cancel:hover {
     opacity: 0.8;
     cursor: pointer;
+}
+
+.combobox.show .combobox__list {
+    display: block;
+}
+
+.combobox.show .combobox__icon {
+    transform: rotate(180deg);
+    transition: all 0.3s ease;
+}
+
+.combobox.show {
+    border: 2px solid #019160;
+}
+
+.combobox.show .combobox__dropdown {
+    border-left: 2px solid #019160
+}
+
+.combobox.show .combobox__input-cancel {
+    display: block;
+}
+
+.combobox.error {
+    border: 2px solid red;
+}
+
+.combobox.error .combobox__dropdown {
+    border-left: 2px solid red;
 }
