dropdowns with VUEJS

--- a/3. VUEJS/misa-cukcuk/src/css/common/dropdown.css
+++ b/3. VUEJS/misa-cukcuk/src/css/common/dropdown.css
@@ -10,6 +10,10 @@
     user-select: none;
     cursor: pointer;
 }
+.dropdown.dropdown--restaurant {
+    width: 250px;
+    margin: 0 20px ;
+}
 /* FOCUS DROPDOWN */
 .focus-dropdown {
     border: 1px solid #019160 !important;
